Student Enrolment to Course

--- a/project7/app7/templates/reg.html
+++ b/project7/app7/templates/reg.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <form method="post" action="">
+        <form method="POST" action="">
             {% csrf_token %} 
             Student Name
             <select name="sname">
