unordered & ordered list

--- a/project5/app5/templates/showlist.html
+++ b/project5/app5/templates/showlist.html
@@ -6,14 +6,14 @@
     <title>List</title>
 </head>
 <body>
-    <h1 id="i1">Unordered list of fruits</h1>
+    <h1>Unordered list of fruits</h1>
     <ul>
         {% for fruit in fruits %}
         <li>{{fruit}}</li>
         {% endfor %}
     </ul>
 
-    <h1 id="i2">Order list of studets</h1>
+    <h1>Order list of studets</h1>
     <ol>
         {% for student in students %}
         <li>{{student}}</li>
