--- a/project6/app6/templates/layout.html
+++ b/project6/app6/templates/layout.html
@@ -7,13 +7,15 @@
 </head>
 <body>
     <nav>
-        <a href="/home/">Home</a>
-        <a href="/aboutus/">About Us</a>
+        <a href="/home/">Home</a> |
+        <a href="/aboutus/">About Us</a> |
         <a href="/contactus/">Contact Us</a>
     </nav>
 
     <section>
-        {% block content %} {% endblock %}
+        {% block content %} 
+        
+        {% endblock %}
     </section>
 
     <footer>
